@@ -1,0 +1,46 @@
+name: docker
+
+on:
+  push:
+  schedule:
+  - cron: "42 2 27 * *"
+
+jobs:
+  docker-ci:
+    runs-on: ubuntu-latest
+    name: docker-ci
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: docker/ci
+        tags: rprotobuf/ci
+
+  docker-run:
+    runs-on: ubuntu-latest
+    name: docker-run
+    needs: docker-ci
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: docker/run
+        tags: rprotobuf/run
